cot-macros/tests/ui/derive_into_response_invalid_variant_struct.rs
use cot::response::IntoResponse;

#[derive(IntoResponse)]
enum MyResponse {
    A { field: u32 },
}

fn main() {}
